Added more markers

--- a/travel_journal.html
+++ b/travel_journal.html
@@ -17,6 +17,22 @@
                 <img class="florida" src="marker.png">
             </article>
 
+            <article>
+                <img class="mississippi" src="marker.png">
+            </article>
+
+            <article>
+                <img class="dc" src="marker.png">
+            </article>
+
+            <article>
+                <img class="spacecenter" src="marker.png">
+            </article>
+
+            <article>
+                <img class="disney" src="marker.png">
+            </article>
+
         </section>
 
         <footer>
