Added test popups, removed some redundant code.

--- a/travel_journal.html
+++ b/travel_journal.html
@@ -14,23 +14,23 @@
 
         <section>
             <article>
-                <img class="florida" src="marker.png">
+                <img class="florida" id="florida" src="marker.png" onclick="details(id)">
             </article>
 
             <article>
-                <img class="mississippi" src="marker.png">
+                <img class="mississippi" id="mississippi" src="marker.png" onclick="details(id)">
             </article>
 
             <article>
-                <img class="dc" src="marker.png">
+                <img class="dc" id="dc" src="marker.png" onclick="details(id)">
             </article>
 
             <article>
-                <img class="spacecenter" src="marker.png">
+                <img class="spacecenter" id="spacecenter" src="marker.png" onclick="details(id)">
             </article>
 
             <article>
-                <img class="disney" src="marker.png">
+                <img class="disney" id="disney" src="marker.png" onclick="details(id)">
             </article>
 
         </section>
@@ -40,6 +40,8 @@
             <p>Contact Information: <a href="mailto:rarainey@memphis.edu">rarainey@memphis.edu</a></p>
             <p>Last Updated: 2024</p>
         </footer>
+
+        <script src="travel_journal.js"></script>
 
     </body>
 
