Added dynamic scaling to map and markers

--- a/travel_journal.html
+++ b/travel_journal.html
@@ -3,6 +3,8 @@
 
     <link rel="stylesheet" href="travel_journal.css">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <head>
         <title>Travel Journal</title>
     </head>
@@ -32,6 +34,8 @@
             <article>
                 <img class="disney" id="disney" src="marker.png" onclick="details(id)">
             </article>
+
+            <img class="map" id="map" src="map.jpg">
 
         </section>
 
