Clicking anywhere on map clears popup

--- a/travel_journal.html
+++ b/travel_journal.html
@@ -35,7 +35,7 @@
                 <img class="disney" id="disney" src="marker.png" onclick="details(id)">
             </article>
 
-            <img class="map" id="map" src="map.jpg">
+            <img class="map" id="map" src="map.jpg" onclick="clearPopup()">
 
         </section>
 
