Added images to popups

--- a/travel_journal.html
+++ b/travel_journal.html
@@ -16,26 +16,26 @@
 
         <section>
             <article>
-                <img class="florida" id="florida" src="marker.png" onclick="details(id)">
+                <img class="florida" id="florida" src="images/marker.png" onclick="details(id)">
             </article>
 
             <article>
-                <img class="mississippi" id="mississippi" src="marker.png" onclick="details(id)">
+                <img class="mississippi" id="mississippi" src="images/marker.png" onclick="details(id)">
             </article>
 
             <article>
-                <img class="dc" id="dc" src="marker.png" onclick="details(id)">
+                <img class="dc" id="dc" src="images/marker.png" onclick="details(id)">
             </article>
 
             <article>
-                <img class="spacecenter" id="spacecenter" src="marker.png" onclick="details(id)">
+                <img class="spacecenter" id="spacecenter" src="images/marker.png" onclick="details(id)">
             </article>
 
             <article>
-                <img class="disney" id="disney" src="marker.png" onclick="details(id)">
+                <img class="disney" id="disney" src="images/marker.png" onclick="details(id)">
             </article>
 
-            <img class="map" id="map" src="map.jpg" onclick="clearPopup()">
+            <img class="map" id="map" src="images/map.jpg" onclick="clearPopup()">
 
         </section>
 
